# MCC

./: .gitignore  CMakeLists.txt  biseccion.hpp  main.cpp  mcc  simpson.hpp
src/: CMakeLists.txt  main.cpp  simpson.hpp  trapecios.hpp
src/algoritmos/: biseccion.hpp  ecuaciones_diferenciales.hpp  euler.hpp  integrales.hpp  newton_raphson.hpp  riemman.hpp
